Just removed a comment

--- a/Robotics Scouting Server/.classpath
+++ b/Robotics Scouting Server/.classpath
@@ -2,11 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="C:/Users/Kyle Flynn/Coding/Java/exports/Scouting/ScoutingAPI.jar"/>
-=======
->>>>>>> origin/master
+	<classpathentry kind="lib" path="D:/Coding/Eclipse/External Jars/ScoutingAPI.jar"/>
 	<classpathentry kind="lib" path="res"/>
-	<classpathentry kind="lib" path="C:/Users/Kyle/Desktop/ScoutingAPI.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
