More fool proofing and added 'Logging' functionality

--- a/Robotics Scouting Server/server.properties
+++ b/Robotics Scouting Server/server.properties
@@ -1,1 +1,2 @@
-form-file-path=C:/Users/Kyle Flynn/Desktop/Scouting/Data
+form-file-path=C:/Users/Scouting/Data
+log-file-path=C:/Users/Scouting/Logs
