Added extra query search for specific searches

--- a/Robotics Scouting Server/server.properties
+++ b/Robotics Scouting Server/server.properties
@@ -1,2 +1,2 @@
-form-file-path=C:/Users/Scouting/Data
-log-file-path=C:/Users/Scouting/Logs
+form-file-path=C:/Users/Kyle Flynn/Desktop/Scouting Program/Data
+log-file-path=C:/Users/Kyle Flynn/Desktop/Scouting Program/Logs
