Sorting command and framework for HTML data output

--- a/Robotics Scouting Server/server.properties
+++ b/Robotics Scouting Server/server.properties
@@ -1,2 +1,3 @@
 form-file-path=C:/Users/Kyle Flynn/Desktop/Scouting Program/Data
 log-file-path=C:/Users/Kyle Flynn/Desktop/Scouting Program/Logs
+tmp-file-path=C:/Users/Kyle Flynn/Desktop/Scouting Program/tmp
