--- a/Robotics Scouting Server/server.properties
+++ b/Robotics Scouting Server/server.properties
@@ -1,3 +1,4 @@
-form-file-path=C:/Users/Kyle Flynn/Desktop/Scouting Program/Data
-log-file-path=C:/Users/Kyle Flynn/Desktop/Scouting Program/Logs
-tmp-file-path=C:/Users/Kyle Flynn/Desktop/Scouting Program/tmp
+form-file-path=C:/Users/kylef_000/Desktop/Scouting Program/Data
+log-file-path=C:/Users/kylef_000/Desktop/Scouting Program/Logs
+tmp-file-path=C:/Users/kylef_000/Desktop/Scouting Program/tmp
+html-file-path:C:/Users/kylef_000/Desktop/Scouting Program/HTML
